# gpukit

./: .gitignore  out.ppm
crates/gpukit/: Cargo.toml
crates/gpukit/src/: bind_group.rs  buffer.rs  lib.rs  macros.rs  shader.rs  texture.rs
crates/gpukit/src/texture/: dimension.rs  format.rs
crates/gpukit_derive/: Cargo.toml
crates/gpukit_derive/src/: lib.rs
crates/gpukit_egui/: Cargo.toml
crates/gpukit_egui/src/: file_explorer.rs  lib.rs  renderer.rs  shader.frag  shader.vert
crates/inline_str/: Cargo.toml
crates/inline_str/src/: lib.rs
examples/cube/: Cargo.toml
examples/cube/models/: monkey.glb  thingy.glb
examples/cube/src/: main.rs  shader.frag  shader.vert  shader.wgsl
