[package]
name = "gpukit_egui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bytemuck = { version = "1.7.2", features = ["derive"] }
egui = "0.14.0"
gpukit = { path = "../gpukit", features = ["derive"] }
tracing = "0.1.26"

