[package]
name = "cube"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
bytemuck = { version = "1.7.2", features = ["derive"] }
glam = { version = "0.17.3", features = ["bytemuck"] }
gltf = "0.16.0"
gpukit = { path = "../../crates/gpukit", features = ["derive"] }
gpukit_egui = { path = "../../crates/gpukit_egui" }
pollster = "0.2.4"
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
